Navbar: Fix `.navbar-collapse` sizing, replace `.form-inline` in examples

--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -105,7 +105,7 @@
     // on the `.navbar` parent.
     @if $enable-navbar-collapse {
         .navbar-collapse {
-            flex: 1 0 100%;
+            flex: 1 1 100%;
             // Align content vertically in all instances.  Use flexbox utils to override.
             align-items: center;
         }
